<resources>
    <string name="app_name">lesson4</string>
    <string name="c">C</string>
    <string name="PlusMinus">+/-</string>
    <string name="Percent">%</string>
    <string name="Division">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="min">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="Dot">.</string>
    <string name="Eq">=</string>
    <string name="Back"><![CDATA[<<]]></string>
    <string name="ChangeThemeButtonText">изменить тему</string>
    <string name="SettingButton">настройки</string>
    <string name="SwitchText">Ночная тема</string>
    <string name="applyText">Apply</string>
</resources>